@startuml
hide circle
skinparam classAttributeIconSize 0

abstract class Command {
    + execute(Storage, WorkoutList, Ui, UserProfile): void
    + isExit(): boolean
}

class AddShortcutCommand {
    - type: String
    - id: int
    - name: String
    - dictionary: ExerciseDictionary
    + execute(Storage, WorkoutList, Ui, UserProfile): void
}

class ViewDatabaseCommand {
    - dictionary: ExerciseDictionary
    + execute(Storage, WorkoutList, Ui, UserProfile): void
}

class ExerciseDictionary {
    - liftDictionary: TreeMap<Integer, String>
    - runDictionary: TreeMap<Integer, String>
    + getLiftName(int): String
    + getRunName(int): String
    + addLiftShortcut(int, String): void
    + addRunShortcut(int, String): void
    + getLiftShortcuts(): Map<Integer, String>
    + getRunShortcuts(): Map<Integer, String>
}

Command <|-- AddShortcutCommand
Command <|-- ViewDatabaseCommand
AddShortcutCommand --> ExerciseDictionary : mutates
ViewDatabaseCommand --> ExerciseDictionary : reads
@enduml
